syntax = "proto3";

package pb;

option go_package = "cms/pb";

import "google/protobuf/empty.proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message User {
  int32  id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
}

message RegisterRequest {
  User user = 1;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 2;
  string refresh_token = 3;
}